[project]
name = "kbeauty-persona-dashboard"
version = "0.1.0"
description = "Apple HIG style K-Beauty Persona Dashboard"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "numpy>=1.24.0",
]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
